# LPI-Analyser

./: .dockerignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
notebook/: logger.ipynb
src/: main.py
src/client/: main.py
src/client/config/: settings.py
src/client/gui/: __init__.py  main_window.py
src/client/gui/dialogs/: login_dialog.py
src/client/gui/styles/: __init__.py  app_styles.qss
src/client/gui/widgets/: result_widgets.py
src/client/services/: api_client.py  auth_manager.py
src/client/utils/: client_logging_setup.py
src/gui/: __init__.py  application_window.py
src/gui/styles/: __init__.py  app_styles.qss
src/gui/widgets/: menus.py
src/server/: __init__.py  app.py
src/server/auth/: auth_manager.py
src/server/database/: __init__.py  model.py  session.py
src/server/routes/: auth_routes.py
src/utils/: exception_setup.py  logging_setup.py
tests/client/gui/: __init__.py  test_main_window.py
tests/client/gui/widgets/: test_chart_widgets.py
tests/server/utils/: test_logging_setup.py
tests/utils/: test_exception_setup.py  test_logging_setup.py
