[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LPI-Analyser"
version = "0.0.1"
description = "Ein LPI internes Analysetool zur Benutzer-UI und Serveranalyse."
authors = [{name = "Nico Dieckmann", email = "dieckmann@lpi-ing.de"}]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE.txt"}

# Basis-Abhängigkeiten für beide Pakete
dependencies = [
    "pytest == 8.3.4"
]

[project.optional-dependencies]
# Abhängigkeiten für das Client-Paket
client = [
    "PyQt6 == 6.8.0",
    "psutil == 6.1.1",
    "requests == 2.32.3"
]
# Abhängigkeiten für das Connector-Paket
Connector = [
    "requests == 2.32.3"
]

# Abhängigkeiten für das Server-Paket
server = [
    "numpy == 2.2.0",
    "Flask == 3.0.0",
    "fastapi == 0.115.6",
    "uvicorn == 0.34.0",
    "requests == 2.32.3"
]

# Entwicklungstools
dev = [
    "black >= 22.0",
    "flake8 >= 3.9"
]

[project.scripts]
# Einstiegspunkte für Client und Server
lpi-client = "src.client.main:main"
lpi-server = "src.server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src.client", "src.server"]
